--- a/api/src/docs/asciidoc/index.adoc
+++ b/api/src/docs/asciidoc/index.adoc
@@ -39,9 +39,21 @@ Refresh token이 발급된지 7일이 넘었다면 재발급이 불가합니다.
 
 ==== 닉네임 중복 체크
 
-기존 닉네임이 있는 경우 기존 닉네임으로 중복체크해도 false 뜨게 예외처리 해놨습니다.
+가입한 유저의 경우 기존 닉네임으로 중복체크해도 false 뜨게 예외처리 해놨습니다.
 
 operation::닉네임중복체크[snippets='http-request,request-parameters,http-response,response-fields']
+
+&nbsp;
+
+&nbsp;
+
+&nbsp;
+
+==== 이메일 중복 체크
+
+가입한 유저의 경우 기존 이메일로 중복체크해도 false 뜨게 예외처리 해놨습니다.
+
+operation::이메일중복체크[snippets='http-request,request-parameters,http-response,response-fields']
 
 &nbsp;
 
@@ -95,6 +107,54 @@ operation::kakao-register[snippets='http-response,response-fields']
 
 &nbsp;
 
+
+
+=== 구글
+
+*id_token* 말고 *access_token* 을 주셔야 생년월일, 성별도 받아올 수 있습니다.
+
+==== 로그인
+operation::구글로그인성공[snippets='http-request,request-headers']
+&nbsp;
+
+**성공 시**
+
+operation::구글로그인성공[snippets='http-response,response-fields']
+
+&nbsp;
+&nbsp;
+
+**실패 시**
+
+각 소셜 아이디로부터 얻어온 데이터를 가능한 return 해드립니다
+
+operation::구글로그인실패[snippets='http-response,response-fields']
+
+
+&nbsp;
+
+&nbsp;
+
+&nbsp;
+
+==== 회원가입
+
+**multipart/form-data 형식으로 보내주세요**
+
+
+operation::구글회원가입[snippets='http-request,request-headers,request-parameters,request-parts']
+
+&nbsp;
+
+&nbsp;
+
+operation::kakao-register[snippets='http-response,response-fields']
+
+&nbsp;
+
+&nbsp;
+
+&nbsp;
 
 
 == 회원
@@ -201,6 +261,9 @@ operation::get-my-regions[snippets='http-request,request-headers,http-response,r
 &nbsp;
 
 ==== 추가
+
+서버에서 중복체크 하지만, 중복이 안오는게 베스트겠죠?
+
 operation::insert-my-interest-region[snippets='http-request,request-headers,request-fields,http-response,response-fields']
 
 &nbsp;
@@ -211,7 +274,7 @@ operation::insert-my-interest-region[snippets='http-request,request-headers,requ
 
 
 ==== 삭제
-operation::delete-my-interest-region[snippets='http-request,request-headers,path-parameters,http-response,response-fields']
+operation::관심지역들삭제[snippets='http-request,request-headers,request-parameters,http-response,response-fields']
 
 &nbsp;
 
