--- a/api/src/docs/asciidoc/index.adoc
+++ b/api/src/docs/asciidoc/index.adoc
@@ -225,7 +225,9 @@ operation::프로필이미지업데이트[snippets='http-request,request-headers
 
 ==== 탈퇴
 
-operation::회원탈퇴[snippets='http-request,request-headers,http-response,response-fields']
+구글 회원일 시 access_token을 body에 넣어 보내주세요.
+
+operation::회원탈퇴[snippets='http-request,request-fields,request-headers,http-response,response-fields']
 
 &nbsp;
 
